[project]
name = "high-dim-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "keras>=3.12.0",
    "matplotlib>=3.10.8",
    "npmpy>=0.1.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "ruff>=0.14.8",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
